# Mersenne

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml
mersenne/: app.py  dependencies.py  logging_config.py  settings.py
mersenne/endpoints/: primality.py  status.py
mersenne/services/: lucas_lehmer.py
tests/: fixtures.py
tests/test_endpoints/: test_docs.py  test_primality.py  test_status.py
tests/test_services/: test_lucas_lehmer.py
