[project]
name = "mersenne"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.138.0",
    "pydantic-settings>=2.14.2",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx2>=2.4.0",
    "hypothesis>=6.155.7",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "sympy>=1.14.0",
]
